<resources>
    <string name="app_name">MH Car Shiner</string>
    <string name="imgcd_image">Content description of images</string>
    <string name="no_intrnt_cnctn">No internet connection</string>
    <string name="server_problem_sml">There are some server problem.</string>
    <string name="internal_problem_sml">There are some internal problem.</string>
    <string name="no_data_avlbl_refresh">No data available, Please Refresh.</string>
    <string name="refresh_sml">Refresh</string>
    <string name="indevlpmnt_sml">In Development</string>
    <string name="please_wait_3dots">Please wait&#8230;</string>

    <!--Splash-->
    <string name="make_your_carshine_everyday">Make your car shine everyday</string>

    <!--Sign In-->
    <string name="mobileno_sml">Mobile Number</string>
    <string name="cntrycode_india">+91</string>
    <string name="entr_mobile_sml">Enter mobile</string>
    <string name="invalid_mobile">Invalid mobile number</string>
    <string name="password_sml">Password</string>
    <string name="entr_password_sml">Enter password</string>
    <string name="password_6chars_long">Password must be 6 Characters long</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="signin_sml">Login</string>
    <string name="notmember_registernow">Not yet member? Create free account!</string>
    <string name="signup_sml">Signup</string>
    <string name="create_an_account_sml">Create an account</string>
    <string name="invalid_login_crdntls">Mobile and Password does not match.</string>
    <string name="access_denied_sml">Access Denied</string>
    <string name="access_denied_msg">You have no longer access to use this application. Please contact an administrator.</string>

    <!--Sign Up-->
    <string name="firstname_sml">First name</string>
    <string name="entr_firstname_sml">Enter first name</string>
    <string name="lastname_sml">Last name</string>
    <string name="entr_lastname_sml">Enter last name</string>
    <string name="email_sml">Email</string>
    <string name="entr_email_sml">Enter email</string>
    <string name="invalid_email">Invalid email</string>
    <string name="email_exist">Email already EXIST.</string>
    <string name="mobileno_exist">Mobile number already EXIST.</string>
    <string name="mobileno_verfd_sucsfly">Mobile number verified successfully</string>
    <string name="mobileno_not_verfd">Mobile number not verified</string>
    <string name="exist_sml">exist</string>
    <string name="sucsfly_regstr_sml">Successfully registration.</string>

    <!-- Mobile Verification -->
    <string name="verify_mobile_sml">Verify Mobile</string>
    <string name="carrier_charges_apply">Jamnadas Connect will send a one time password to verify mobile number. Carrier SMS charges may apply.</string>
    <string name="waiting_auto_detect_sms">Waiting to automatically detect an SMS sent</string>
    <string name="resend_sml">Resend</string>
    <string name="verfctn_code">Verification Code</string>
    <string name="codesent_msg">Code has been sent to your mobile number.</string>
    <string name="sending_sms_fail">Sending SMS failed, please try again.</string>
    <string name="auto_detect_sms_fail">Auto detect SMS failed, please try again.</string>
    <string name="entr_verfctn_code_if_fail_toautodetect">Enter the verification code below in case if we fail to detect the SMS automatically.</string>
    <string name="entr_verfctn_code">Enter verification code</string>
    <string name="invalid_verfctn_code">Invalid verification code</string>
    <string name="submit_sml">Submit</string>
    <string name="working_sms_plan">Please make sure you have a working SMS plan.\nSit back and relax. We\'ll notify you when we\'re done verifying.</string>
    <string name="no_detect_any_mobileno">Not detected any mobile number</string>
    <string name="allow_permtn_sms">To verify mobile number, you must have to allow SMS permission</string>

    <!--Navigation View-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home_sml">Home</string>
    <string name="myorders_sml">My Orders</string>
    <string name="aboutus_sml">About Us</string>
    <string name="contactus_sml">Contact Us</string>
    <string name="shareapp_sml">Share the App</string>
    <string name="ratereview_sml">Rate &amp; Review</string>
    <string name="account_sml">Account</string>
    <string name="profile_sml">Profile</string>
    <string name="logout_sml">Logout</string>

    <!--Home-->
    <string name="carwash_package_sml">Car Wash Package</string>

    <!--Car Wash Package-->
    <string name="monthly_wash_val">Monthly Wash - %d</string>
    <string name="book_now_sml">Book Now</string>
    <string name="rupees_symbl_val">\u20B9 %d</string>

    <!--Book Order-->
    <string name="book_order_sml">Book order</string>
    <string name="car_details_sml">Car Details</string>
    <string name="vehicle_name_sml">Vehicle name</string>
    <string name="entr_vehicle_name_sml">Enter vehicle name</string>
    <string name="vehicle_number_sml">Vehicle number</string>
    <string name="entr_vehicle_number_sml">Enter Vehicle number</string>
    <string name="select_vehicle_type_sml">Select Vehicle type</string>
    <string-array name="vehicle_types">
        <item>Hatchback</item>
        <item>Sedan</item>
        <item>SUV</item>
        <item>Luxury</item>
    </string-array>
    <string name="select_wash_time_sml">Select Wash time</string>
    <string-array name="wash_times">
        <item>6:00 to 6:30 AM</item>
        <item>6:30 to 7:00 AM</item>
        <item>7:00 to 7:30 AM</item>
        <item>7:30 to 8:00 AM</item>
        <item>8:00 to 8:30 AM</item>
        <item>8:30 to 9:00 AM</item>
        <item>9:00 to 9:30 AM</item>
        <item>9:30 to 10:00 AM</item>
    </string-array>
    <string name="address_details_sml">Address Details</string>
    <string name="flatno_buildingname_sml">Flat no., Building name</string>
    <string name="entr_flatno_buildingname_sml">Enter Flat no., Building name</string>
    <string name="locality_area_street_sml">Locality, area or street</string>
    <string name="entr_locality_area_street_sml">Enter Locality, area or street</string>
    <string name="pincode_sml">Pincode</string>
    <string name="entr_pincode_sml">Enter Pincode</string>
    <string name="city_sml">City</string>
    <string name="entr_valid_city_sml">Enter or select valid city</string>

    <!--Book Order Success-->
    <string name="hashtag_val"># %d</string>
    <string name="thankyou_chooseus_sml">Thank you for choose us</string>
    <string name="order_confirmed_sml">Order Confirmed</string>
    <string name="payable_amnt_sml">Payable amount</string>
    <string name="monthly_wash_sml">Monthly Wash</string>
    <string name="your_service_confrmd_sml">Your service is confirmed.</string>
    <string name="adviser_contact_shortly_msg">Our adviser will contact you shortly &amp; discuss about payment.</string>
    <string name="need_help_quemark">Need help?</string>

    <!--My Orders-->
    <string name="order_hashtag_val">Order # %d</string>
    <string name="location_sml">Location</string>
    <string name="orders_appear_here">Orders appear here</string>

    <!--Contact Us-->
    <string name="get_in_touch_sml">Get in touch!</string>
    <string name="contact_email_sml">sachinmadgun@gmail.com</string>
    <string name="contact_mobileno_sml">+91 8866804080</string>
    <string name="subject_sml">Subject</string>
    <string name="entr_subject_sml">Enter Subject</string>
    <string name="message_sml">Message</string>
    <string name="entr_message_sml">Enter Message</string>
    <string name="sucsfly_contact_inquiry_sml">Our adviser will contact you soon</string>

    <!--Profile-->
    <string name="mobile_sml">Mobile</string>

    <!--Logout-->
    <string name="logout_alrtdlg_msg">Do you want to logout?</string>
    <string name="no_sml">No</string>

    <!--Google Place API key-->
    <string name="google_geo_api_key">AIzaSyDNQamsSS0b0lqy4xXLBtc17xs8aP0uEu8</string>
</resources>
