<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 Jalotsav
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_nvgtndrwr_main_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home_sml" />
    <item
        android:id="@+id/action_nvgtndrwr_main_myorder"
        android:icon="@drawable/ic_playlist_add_check_black_24dp"
        android:title="@string/myorders_sml" />
    <item android:title="@string/app_name">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_nvgtndrwr_main_aboutus"
                    android:icon="@drawable/ic_business_black_24dp"
                    android:title="@string/aboutus_sml" />
                <item
                    android:id="@+id/action_nvgtndrwr_main_contactus"
                    android:icon="@drawable/ic_contact_phone_black_24dp"
                    android:title="@string/contactus_sml" />
                <item
                    android:id="@+id/action_nvgtndrwr_main_share"
                    android:icon="@drawable/ic_share_black_24dp"
                    android:title="@string/shareapp_sml" />
                <item
                    android:id="@+id/action_nvgtndrwr_main_ratereview"
                    android:icon="@drawable/ic_rate_review_black_24dp"
                    android:title="@string/ratereview_sml" />
            </group>
        </menu>
    </item>
    <item android:title="@string/account_sml">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_nvgtndrwr_main_profile"
                    android:icon="@drawable/ic_person_black_24dp"
                    android:title="@string/profile_sml" />
                <item
                    android:id="@+id/action_nvgtndrwr_main_logout"
                    android:icon="@drawable/ic_power_settings_new_black_24dp"
                    android:title="@string/logout_sml" />
            </group>
        </menu>
    </item>
</menu>