<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 Jalotsav
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cordntrlyot_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActvtySignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView xmlns:cardview="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16jdp"
            cardview:cardCornerRadius="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16jdp"
                android:layout_marginRight="@dimen/_16jdp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_5jdp"
                android:paddingTop="@dimen/_5jdp">

                <ImageView
                    android:layout_width="@dimen/_80jdp"
                    android:layout_height="@dimen/_80jdp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/imgcd_image"
                    android:src="@mipmap/ic_launcher" />

                <!--First Name-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtinputlyot_signup_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5jdp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtinptet_signup_firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/firstname_sml"
                        android:inputType="textPersonName"
                        android:textColorHint="@color/grayA8"
                        android:textSize="@dimen/_14jdp" />
                </android.support.design.widget.TextInputLayout>

                <!--Last Name-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtinputlyot_signup_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtinptet_signup_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lastname_sml"
                        android:inputType="textPersonName"
                        android:textColorHint="@color/grayA8"
                        android:textSize="@dimen/_14jdp" />
                </android.support.design.widget.TextInputLayout>

                <!--Email-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtinputlyot_signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtinptet_signup_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_sml"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/grayA8"
                        android:textSize="@dimen/_14jdp" />
                </android.support.design.widget.TextInputLayout>

                <!--Mobile No.-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtinputlyot_signup_mobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtinptet_signup_mobileno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobileno_sml"
                        android:inputType="phone"
                        android:maxLength="14"
                        android:text="@string/cntrycode_india"
                        android:textColorHint="@color/grayA8"
                        android:textSize="@dimen/_14jdp" />
                </android.support.design.widget.TextInputLayout>

                <!--Password-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtinputlyot_signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                    <!--app:passwordToggleTint="@color/white"-->

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtinptet_signup_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_sml"
                        android:inputType="textPassword"
                        android:textColorHint="@color/grayA8"
                        android:textSize="@dimen/_14jdp" />
                </android.support.design.widget.TextInputLayout>

                <!--SignUp-->
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/appcmptbtn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5jdp"
                    android:text="@string/signup_sml"
                    android:textColor="@color/colorPrimaryBlueMidnight" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_10jdp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

    <ProgressBar
        android:id="@+id/prgrsbr_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>